--- a/helloWorld.html
+++ b/helloWorld.html
@@ -7,7 +7,7 @@
     <title>Hello platzi</title>
 </head>
 <body>
-    <h1>Sitio web Cool</h1>
+    <h1>Sitio web Profesional</h1>
     <p>Saludos people</p>
     <p>Por favor cuentame como te parecio el curso</p>
 </body>
